--- a/client/public/harvester.html
+++ b/client/public/harvester.html
@@ -34,7 +34,7 @@
                     </div>
                     <select name="packageType" id="packageType">
                         <option value="BOX">Box</option>
-                        <option value="BAG">Bag</option>
+                        <!-- <option value="BAG">Bag</option> -->
                     </select>
                 </div>
                 <div class="form-submit">
