--- a/client/public/packerMenu.html
+++ b/client/public/packerMenu.html
@@ -35,6 +35,9 @@
                         <label><a href="/packer/addteabag">Add teabag to package</a></label>
                     </div>
                 </div>
+                <div class="form-submit">
+                    <input type="reset" name="logout" id="logout" class="submit" value="Logout" />
+                </div>
             </form>
         </div>
 
