--- a/client/public/productInfo.html
+++ b/client/public/productInfo.html
@@ -28,13 +28,29 @@
                     </div>
                 </div>
                 <div class="form-row">
-                	<div class="form-group">
-                        <label>Product:</label>
+                    <div class="form-group">
+                        <label>Batch No:</label>
                     </div>
                     <div class="form-group-ans">
-                        <label><%= productName %></label>
+                        <label><%= productBatchNo %></label>
                     </div>
                 </div>
+                <div class="form-row">
+                	<div class="form-group">
+                        <label>Product Id:</label>
+                    </div>
+                    <div class="form-group-ans">
+                        <label><%= productID %></label>
+                    </div>
+                </div>
+                <div class="form-row">
+                        <div class="form-group">
+                            <label>Product:</label>
+                        </div>
+                        <div class="form-group-ans">
+                            <label><%= productName %></label>
+                        </div>
+                    </div>
                 <div class="form-row">
                     <div class="form-group">
                         <label>PackageId:</label>
