--- a/client/public/harvesterResult.html
+++ b/client/public/harvesterResult.html
@@ -18,7 +18,7 @@
 
         <div class="container">
             <form method="POST" class="appointment-form" id="appointment-form">
-                <h2>Tea Leaf Harvest package</h2>
+                <h2>Harvest package</h2>
                 <div class="form-row">
                 	<div class="form-group">
                         <label>Node ID:</label>
