--- a/client/public/littlepoResult.html
+++ b/client/public/littlepoResult.html
@@ -18,7 +18,7 @@
 
         <div class="container">
             <form method="POST" class="appointment-form" id="appointment-form">
-                <h2>Littlepo receive result</h2>
+                <h2>Littlepo received</h2>
                 <div class="form-row">
                 	<div class="form-group">
                         <label>Node ID:</label>
