--- a/client/public/queryResult.html
+++ b/client/public/queryResult.html
@@ -16,7 +16,7 @@
     <div class="main">
         <div class="container">
             <form method="POST" class="appointment-form" id="appointment-form">
-                <h2>Product Query</h2>
+                <h2>Littlepo Query</h2>
                 <div class="form-row">
                 	<div class="form-group">
                         <label>Product:</label>
@@ -45,7 +45,7 @@
                     </div>
                 <% } %>
                 <div class="form-submit">
-                    <input type="reset" name="cancel" id="back" url="/" class="submit" value="New Query"/>
+                    <input type="reset" name="cancel" id="back" url="/" class="submit" value="Close"/>
                 </div>
             </form>
         </div>
