--- a/client/public/retailshop.html
+++ b/client/public/retailshop.html
@@ -18,7 +18,7 @@
 
         <div class="container">
             <form method="POST" class="appointment-form" id="appointment-form">
-                <h2>Create tea cup Panel</h2>
+                <h2>Create tea cup UI</h2>
                 <div class="form-group-1">
                     <input type="text" name="dxQRCodeId" id="dxQRCodeId" placeholder="Teabag QRCode" required />
                     <input type="number" name="price" id="price" placeholder="Price (in SGD)" required/>
@@ -48,7 +48,7 @@
                     </div>
                 </div>
                 <div class="form-submit">
-                    <input type="reset" name="Scan" id="scan" class="cancel" value="Scan QRCode"/>
+                    <input type="reset" name="Scan" id="scan" class="cancel" value="Scan"/>
                     <input type="submit" name="submit" id="submit" class="submit" value="Submit" />
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <input type="reset" name="logout" id="logout" class="submit" value="Logout" />
