--- a/client/public/scanharvester.html
+++ b/client/public/scanharvester.html
@@ -17,7 +17,7 @@
 
         <div class="container">
             <form method="GET" class="appointment-form" id="appointment-form" action="/packer/addpackage">
-                <h2>Scan Harvester Package</h2>
+                <h2>Scan Harvest Package</h2>
                 <div class="form-group-1">
                     <input type="text" name="qrCodeId" id="qrCodeId" placeholder="QRCode" required />
                 </div>
@@ -31,8 +31,8 @@
                 </div>
                 <div class="form-submit">
                     <input type="reset" name="back" id="back" url="/packer" class="cancel" value="Cancel"/>
-                    <input type="reset" name="Scan" id="scan" class="cancel" value="Scan QRCode"/>
-                    <input type="submit" name="submit" id="submit" class="submit" value="Create Packer" />
+                    <input type="reset" name="Scan" id="scan" class="cancel" value="Scan"/>
+                    <input type="submit" name="submit" id="submit" class="submit" value="Pack" />
                 </div>
             </form>
         </div>
