--- a/client/public/teabagAdded.html
+++ b/client/public/teabagAdded.html
@@ -92,6 +92,6 @@
                 correctLevel : QRCode.CorrectLevel.H
             });
         });
-    </script>s
+    </script>
 </body>
 </html>
