--- a/client/public/littlepo.html
+++ b/client/public/littlepo.html
@@ -18,7 +18,7 @@
 
         <div class="container">
             <form method="POST" class="appointment-form" id="appointment-form">
-                <h2>Little receive tea package</h2>
+                <h2>Littlepo Shop UI</h2>
                 <div class="form-group-1">
                     <input type="text" name="qrCodeId" id="qrCodeId" placeholder="Packer QRCode" required />
                     <input type="number" name="weight" id="weight" placeholder="Package weight" required style="width: 40%"/>
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="form-submit">
-                    <input type="reset" name="Scan" id="scan" class="cancel" value="Scan QRCode"/>
+                    <input type="reset" name="Scan" id="scan" class="cancel" value="Scan"/>
                     <input type="submit" name="submit" id="submit" class="submit" value="Submit" />
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <input type="reset" name="logout" id="logout" class="submit" value="Logout" />
