--- a/client/public/productInfo.html
+++ b/client/public/productInfo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Product Detail</title>
+    <title>Littlepo Query</title>
 
     <!-- Font Icon -->
     <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
@@ -18,7 +18,7 @@
 
         <div class="container">
             <form method="POST" class="appointment-form" id="appointment-form">
-                <h2>Product Information</h2>
+                <h2>Littlepo Query</h2>
                 <div class="form-row">
                 	<div class="form-group">
                         <label>User ID:</label>
@@ -77,7 +77,7 @@
                 </div>
                 
                 <div class="form-submit">
-                    <input type="reset" name="cancel" id="back" class="cancel" url="/tracking" value="New Query"/>
+                    <input type="reset" name="cancel" id="back" class="submit" url="/tracking" value="Close"/>
                 </div>
             </form>
         </div>
