--- a/client/public/littlepoInfo.html
+++ b/client/public/littlepoInfo.html
@@ -15,8 +15,9 @@
 <body>
 
     <div class="main">
-
+        
         <div class="container">
+            <div class="logo"><img src="/images/logo.jpeg"/></div>
             <form method="POST" class="appointment-form" id="appointment-form" action="littleporeceive">
                 <h2>Little UI</h2>
                 <div class="form-row">
