--- a/client/public/teabagAdded.html
+++ b/client/public/teabagAdded.html
@@ -17,6 +17,7 @@
     <div class="main">
 
         <div class="container">
+            <div class="logo"><img src="/images/logo.jpeg"/></div>
             <form method="POST" class="appointment-form" id="appointment-form">
                 <h2>TeaBag Information</h2>
                 <div class="form-row">
