--- a/client/public/customer.html
+++ b/client/public/customer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Littlepo Query</title>
+    <title>Littlepo Food Tracking</title>
 
     <!-- Font Icon -->
     <link rel="stylesheet" href="/fonts/material-icon/css/material-design-iconic-font.min.css">
@@ -15,29 +15,27 @@
 <body>
 
     <div class="main">
-
         <div class="container">
+            <div class="logo" style="text-align: right;"><img src="/images/logo.jpeg"/></div>
             <form method="GET" class="appointment-form" id="appointment-form" action="tracking">
-                <h2>Scan QR Code</h2>
+                <h2>Littlepo Food Tracking</h2>
                 <div class="form-group-1">
-                    <input type="text" name="qrCodeId" id="qrCodeId" placeholder="Please enter of scan QRCode of product" required />
+                    <input type="text" name="qrCodeId" id="qrCodeId" placeholder="Please enter of scan QRCode of product" required style="display: none;"/>
                     <!-- <input type="text" name="nodeName" id="nodeName" placeholder="Node Name" required /> -->
                 </div>
-                <div class="form-row">
+                <div class="form-group-1" style="text-align: center;">
                     <div class="video-group">
                         <video id="preview" style="min-height: 100%;width: 250px; border: solid 1px gray;"></video>
                     </div>
-                    <div class="form-group-ans">
-                        <div id="scanResult"></div>
-                    </div>
                 </div>
-                <div class="form-submit">
-                    <input type="reset" name="Scan" id="scan" class="cancel" value="Scan"/>
+                <div class="form-submit" style="text-align: center;">
+                    <input type="reset" name="Scan" id="scan" class="submit" value="Scan"/>
                     <!-- <input type="submit" name="submit" id="submit" class="submit" value="View History" /> -->
                     <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
                     <!-- <input type="reset" name="login" id="login" class="submit" value="Login As Operator" /> -->
                 </div>
             </form>
+            
         </div>
 
     </div>
