--- a/client/public/harvester.html
+++ b/client/public/harvester.html
@@ -16,8 +16,8 @@
 <body>
 
     <div class="main">
-
         <div class="container">
+            <div class="logo"><img src="/images/logo.jpeg"/></div>
             <form method="POST" class="appointment-form" id="appointment-form">
                 <h2>Create Harvest package</h2>
                 <div class="form-group-1">
