--- a/client/public/littlepo.html
+++ b/client/public/littlepo.html
@@ -17,11 +17,12 @@
     <div class="main">
 
         <div class="container">
+            <div class="logo"><img src="/images/logo.jpeg"/></div>
             <form method="POST" class="appointment-form" id="appointment-form">
                 <h2>Littlepo Shop UI</h2>
                 <div class="form-group-1">
-                    <input type="text" name="qrCodeId" id="qrCodeId" placeholder="Packer QRCode" required />
-                    <input type="number" name="weight" id="weight" placeholder="Package weight" required style="width: 40%"/>
+                    <input type="text" name="qrCodeId" id="qrCodeId" placeholder="Packer QRCode" required style="width: 250px;" />
+                    <input type="number" step="0.01" name="weight" id="weight" placeholder="Package weight" required style="width: 190px;"/>
                     <select name="weightType" id="weightType" style="width: 20%;">
                         <option value="KG">KG</option>
                         <option value="G">G</option>
