--- a/client/public/littlepoResult.html
+++ b/client/public/littlepoResult.html
@@ -15,8 +15,9 @@
 <body>
 
     <div class="main">
-
+        
         <div class="container">
+            <div class="logo"><img src="/images/logo.jpeg"/></div>
             <form method="POST" class="appointment-form" id="appointment-form">
                 <h2>Littlepo received</h2>
                 <div class="form-row">
