--- a/client/public/packer.html
+++ b/client/public/packer.html
@@ -17,11 +17,12 @@
     <div class="main">
 
         <div class="container">
+            <div class="logo"><img src="/images/logo.jpeg"/></div>
             <form method="POST" class="appointment-form" id="appointment-form">
                 <h2>Packer UI</h2>
                 <div class="form-group-1">
                     <input type="text" value ="<%= qrCodeId %>" name="qrCodeId" id="qrCodeId" placeholder="B Node QRCode" required readonly/>
-                    <input type="number" name="weight" id="weight" placeholder="Package Weight" required style="width: 40%"/>
+                    <input type="number" name="weight" step="0.01" id="weight" placeholder="Package Weight" required style="width: 40%"/>
                     <select name="weightType" id="weightType" style="width: 20%;">
                         <option value="KG">KG</option>
                         <option value="G">G</option>
