--- a/client/public/packerMenu.html
+++ b/client/public/packerMenu.html
@@ -15,8 +15,8 @@
 <body>
 
     <div class="main">
-
         <div class="container">
+            <div class="logo"><img src="/images/logo.jpeg"/></div>
             <form method="POST" class="appointment-form">
                 <h2>Packer Action</h2>
                 <div class="form-row">
