--- a/client/public/queryResult.1.html
+++ b/client/public/queryResult.1.html
@@ -4,45 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Harvester UI</title>
+    <title>Littlepo Food Tracking</title>
 
     <!-- Font Icon -->
-    <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="/fonts/material-icon/css/material-design-iconic-font.min.css">
 
     <!-- Main css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-
     <div class="main">
         <div class="container">
+            <div class="logo"><img src="/images/logo.jpeg"/></div>
             <form method="POST" class="appointment-form" id="appointment-form">
-                <h2>Product Tracking History</h2>
-                <% for(var i=0; i < data.length; i++) { %>
-                    <div class="form-row">
-                        <!-- <div class="form-group">
-                            <label>Node ID:</label>
-                        </div> -->
-                        <div class="form-group">
-                            <label><%= data[i].nodeID %></label>
-                        </div>
-                        <div class="form-group-ans">
-                            <a href="http://localhost:3000/productinfo?qrCodeId=<%= data[i].qrCodeID %>" target="_blank"><%= data[i].createTime %></a>
-                        </div>
+                <h2>Littlepo Food Tracking</h2>
+                <div class="form-row">
+                	<div class="form-group">
+                        <label>Product:</label>
                     </div>
-                 <% } %>
-
-                <div class="form-submit">
-                    <input type="reset" name="cancel" id="back" url="/" class="cancel" value="New Query"/>
+                    <div class="form-group-ans">
+                        <label><%= qrCodeId %></label>
+                    </div>
+                </div>
+                <div class="form-row">
+                	<div class="form-group-all">
+                        <label>Where did the tea come from?</label>
+                    </div>
+                </div>
+                <div class="form-submit" style="text-align: center;">
+                    <input type="reset" name="cancel" id="back" url="/" class="submit" value="Close"/>
                 </div>
             </form>
         </div>
 
     </div>
+
     <!-- JS -->
     <script src="/vendor/jquery/jquery.min.js"></script>
-    <script src="/js/qrcode.min.js"></script>
     <script src="/js/main.js"></script>
-    
 </body>
 </html>
