--- a/client/public/queryResult.html
+++ b/client/public/queryResult.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Littlepo Query</title>
+    <title>Littlepo Food Tracking</title>
 
     <!-- Font Icon -->
     <link rel="stylesheet" href="/fonts/material-icon/css/material-design-iconic-font.min.css">
@@ -15,8 +15,9 @@
 <body>
     <div class="main">
         <div class="container">
+            <div class="logo"><img src="/images/logo.jpeg"/></div>
             <form method="POST" class="appointment-form" id="appointment-form">
-                <h2>Littlepo Query</h2>
+                <h2>Littlepo Food Tracking</h2>
                 <div class="form-row">
                 	<div class="form-group">
                         <label>Product:</label>
@@ -44,7 +45,7 @@
                         </div>
                     </div>
                 <% } %>
-                <div class="form-submit">
+                <div class="form-submit" style="text-align: center;">
                     <input type="reset" name="cancel" id="back" url="/" class="submit" value="Close"/>
                 </div>
             </form>
