--- a/client/public/retailshop.html
+++ b/client/public/retailshop.html
@@ -17,25 +17,28 @@
     <div class="main">
 
         <div class="container">
+            <div class="logo"><img src="/images/logo.jpeg"/></div>
             <form method="POST" class="appointment-form" id="appointment-form">
-                <h2>Create tea cup UI</h2>
+                <h2>Littlepo Tea Shop</h2>
                 <div class="form-group-1">
-                    <input type="text" name="dxQRCodeId" id="dxQRCodeId" placeholder="Teabag QRCode" required />
-                    <input type="number" name="price" id="price" placeholder="Price (in SGD)" required/>
+                    <input type="text" name="dxQRCodeId" id="dxQRCodeId" placeholder="Teabag QRCode" required style="width: 250px;"/>
                 </div>
                 <div class="form-group-1">
-                    <div class="form-group-ans">
+                    <input type="number" name="price" id="price" placeholder="Price (in SGD)" required style="width: 250px;"/>
+                </div>
+                <div class="form-group-1">
+                    <div class="form-group-ans" style="text-align: left; width: 250px;">
                         <label>Product</label>
                     </div>
                     <select name="productId" id="productId">
-                        <option value="TC0001">Tea Cup</option>
+                        <option value="TC0001">Milk Tea</option>
                     </select>
                 </div>
                 <div class="form-group-1">
-                    <div class="form-group-ans">
+                    <div class="form-group-ans" style="text-align: left; width: 250px;">
                         <label>Package Type</label>
                     </div>
-                    <select name="packageType" id="packageType">
+                    <select name="packageType" id="packageType" style="width: 250px;">
                         <option value="CUP">Cup</option>
                     </select>
                 </div>
