--- a/client/public/scanharvester.html
+++ b/client/public/scanharvester.html
@@ -14,24 +14,22 @@
 <body>
 
     <div class="main">
-
         <div class="container">
+            <div class="logo"><img src="/images/logo.jpeg"/></div>
             <form method="GET" class="appointment-form" id="appointment-form" action="/packer/addpackage">
                 <h2>Scan Harvest Package</h2>
-                <div class="form-group-1">
-                    <input type="text" name="qrCodeId" id="qrCodeId" placeholder="QRCode" required />
+                <div class="form-group-1" style="text-align: center;">
+                    <input type="text" name="qrCodeId" id="qrCodeId" placeholder="QRCode" required style="width: 250px;"/>
                 </div>
-                <div class="form-group-1">
+                <div class="form-group-1" style="text-align: center;">
                     <div class="video-group">
                         <video id="preview" style="min-height: 100%;width: 250px; border: solid 1px gray;"></video>
                     </div>
-                    <div class="form-group-ans">
-                        <div id="scanResult"></div>
-                    </div>
                 </div>
-                <div class="form-submit">
+                <div class="form-submit" style="text-align: center;">
                     <input type="reset" name="back" id="back" url="/packer" class="cancel" value="Cancel"/>
-                    <input type="reset" name="Scan" id="scan" class="cancel" value="Scan"/>
+                    <input type="reset" name="Scan" id="scan" class="submit" value="Scan"/>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <input type="submit" name="submit" id="submit" class="submit" value="Pack" />
                 </div>
             </form>
