--- a/client/public/littlepo.html
+++ b/client/public/littlepo.html
@@ -22,8 +22,10 @@
                 <h2>Littlepo Shop UI</h2>
                 <div class="form-group-1">
                     <input type="text" name="qrCodeId" id="qrCodeId" placeholder="Packer QRCode" required style="width: 250px;" />
+                </div>
+                <div class="form-group-1">
                     <input type="number" step="0.01" name="weight" id="weight" placeholder="Package weight" required style="width: 190px;"/>
-                    <select name="weightType" id="weightType" style="width: 20%;">
+                    <select name="weightType" id="weightType" style="width: 60px;">
                         <option value="KG">KG</option>
                         <option value="G">G</option>
                     </select>
