--- a/client/public/packerResult.html
+++ b/client/public/packerResult.html
@@ -101,6 +101,14 @@
                         <label><%= location %></label>
                     </div>
                 </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label>txHash:</label>
+                    </div>
+                    <div class="form-group-ans" style="word-break: break-all;">
+                        <label><%= txHash %></label>
+                    </div>
+                </div>
                 
                 <div class="form-submit">
                     <input type="reset" name="cancel" id="back" url ="/packer" class="cancel" value="Back" />
