--- a/client/public/retailshopResult.html
+++ b/client/public/retailshopResult.html
@@ -77,7 +77,15 @@
                         <label><%= location %></label>
                     </div>
                 </div>
-                
+                <div class="form-row">
+                    <div class="form-group">
+                        <label>txHash:</label>
+                    </div>
+                    <div class="form-group-ans" style="word-break: break-all;">
+                        <label><%= txHash %></label>
+                    </div>
+                </div>
+            
                 <div class="form-submit">
                     <input type="reset" name="cancel" id="back" url="/retailshop" class="cancel" value="Back" />
                     <input type="reset" name="printQR" id="printQR" class="submit" value="Print QR Code" />
