--- a/client/public/teabagAdded.html
+++ b/client/public/teabagAdded.html
@@ -69,6 +69,14 @@
                         <label><%= dxQrCodeID %></label>
                     </div>
                 </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label>txHash:</label>
+                    </div>
+                    <div class="form-group-ans" style="word-break: break-all;">
+                        <label><%= txHash %></label>
+                    </div>
+                </div>
                 
                 <div class="form-submit">
                     <input type="reset" name="back" id="back" url="/packer/addteabag" class="cancel" value="Back"/>
