--- a/client/public/littlepoResult.html
+++ b/client/public/littlepoResult.html
@@ -15,7 +15,6 @@
 <body>
 
     <div class="main">
-        
         <div class="container">
             <div class="logo"><img src="/images/logo.jpeg"/></div>
             <form method="POST" class="appointment-form" id="appointment-form">
@@ -75,6 +74,14 @@
                     </div>
                     <div class="form-group-ans">
                         <label><%= location %></label>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label>txHash:</label>
+                    </div>
+                    <div class="form-group-ans" style="word-break: break-all;">
+                        <label><%= txHash %></label>
                     </div>
                 </div>
                 
