--- a/client/public/addteabag.html
+++ b/client/public/addteabag.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>Packer UI</title>
 
     <!-- Font Icon -->
@@ -41,10 +40,10 @@
                     </div>
                 </div>
                 <div class="form-submit">
-                    <input type="reset" name="back" id="back" class="cancel" url="/packer" value="Cancel" />
-                    <input type="reset" name="Scan" id="scan" class="submit" value="Scan"/>
+                    <button type="reset" name="back" id="back" class="cancel" url="/packer">Cancel</button>
+                    <button type="reset" name="Scan" id="scan" class="submit">Scan</button>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <input type="submit" name="submit" id="submit" class="submit" value="Submit" />
+                    <button type="submit" name="submit" id="submit" class="submit">Submit</button>
                 </div>
             </form>
         </div>
