--- a/client/public/harvester.html
+++ b/client/public/harvester.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>Harvester UI</title>
 
     <!-- Font Icon -->
@@ -39,9 +38,8 @@
                 </div>
                 <div class="form-submit">
                     <!-- <input type="reset" name="cancel" id="cancel" class="cancel" value="Cancel" /> -->
-                    <input type="submit" name="submit" id="submit" class="submit" value="Submit" />
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <input type="reset" name="logout" id="logout" class="submit" value="Logout" />
+                    <button type="submit" name="submit" id="submit" class="submit">Submit</button>
+                    <button type="reset" name="logout" id="logout" class="submit">Logout</button>
                 </div>
             </form>
         </div>
