--- a/client/public/harvesterResult.html
+++ b/client/public/harvesterResult.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>Harvester</title>
 
     <!-- Font Icon -->
@@ -111,8 +110,8 @@
                 </div>
                 
                 <div class="form-submit">
-                    <input type="reset" name="back" id="back" url="/harvester" class="cancel" value="Back" />
-                    <input type="reset" name="printQR" id="printQR" class="submit" value="Print QR Code" />
+                    <button type="reset" name="back" id="back" url="/harvester" class="cancel">Back</button>
+                    <button type="reset" name="printQR" id="printQR" class="submit">Print QR Code</button>
                 </div>
             </form>
         </div>
