--- a/client/public/login.html
+++ b/client/public/login.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>Login</title>
 
     <!-- Font Icon -->
@@ -35,8 +34,10 @@
                     <input type="password" class="form-input" name="password" id="password" placeholder="Password"  style="width: 250px;"/>
                 </div>
                 <div class="form-submit" style="text-align: center;">
+                    <!-- <button type="reset" name="cancel" id="cancel" class="cancel">Cancel</button> -->
+                    <button type="submit" name="submit" id="submit" class="submit">Submit</button>
                     <!-- <input type="reset" name="cancel" id="cancel" class="cancel" value="Cancel" /> -->
-                    <input type="submit" name="submit" id="submit" class="submit" value="Submit" />
+                    <!-- <input type="submit" name="submit" id="submit" class="submit" value="Submit" /> -->
                 </div>
             </form>
         </div>
