--- a/client/public/packer.html
+++ b/client/public/packer.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>Packer UI</title>
 
     <!-- Font Icon -->
@@ -50,8 +49,8 @@
                     </select>
                 </div>
                 <div class="form-submit">
-                    <input type="reset" name="back" id="back" url="/packer/scanharvester" class="cancel" value="Cancel" />
-                    <input type="submit" name="submit" id="submit" class="submit" value="Submit" />
+                    <button type="reset" name="back" id="back" url="/packer/scanharvester" class="cancel">Cancel</button>
+                    <button type="submit" name="submit" id="submit" class="submit">Submit</button>
                 </div>
             </form>
         </div>
