--- a/client/public/packerMenu.html
+++ b/client/public/packerMenu.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="form-submit">
-                    <input type="reset" name="logout" id="logout" class="submit" value="Logout" />
+                    <button type="reset" name="logout" id="logout" class="submit">Logout</button>
                 </div>
             </form>
         </div>
