--- a/client/public/packerResult.html
+++ b/client/public/packerResult.html
@@ -111,8 +111,8 @@
                 </div>
                 
                 <div class="form-submit">
-                    <input type="reset" name="cancel" id="back" url ="/packer" class="cancel" value="Back" />
-                    <input type="reset" name="printQR" id="printQR" class="submit" value="Print QR Code" />
+                    <button type="reset" name="cancel" id="back" url ="/packer" class="cancel">Back</button>
+                    <button type="reset" name="printQR" id="printQR" class="submit">Print QR Code</button>
                 </div>
             </form>
         </div>
