--- a/client/public/retailshop.html
+++ b/client/public/retailshop.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>Selling Tea UI</title>
 
     <!-- Font Icon -->
@@ -51,10 +50,10 @@
                     </div>
                 </div>
                 <div class="form-submit">
-                    <input type="reset" name="Scan" id="scan" class="cancel" value="Scan"/>
-                    <input type="submit" name="submit" id="submit" class="submit" value="Submit" />
+                    <button type="reset" name="Scan" id="scan" class="cancel" value="">Scan</button>
+                    <button type="submit" name="submit" id="submit" class="submit" value="">Submit</button>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <input type="reset" name="logout" id="logout" class="submit" value="Logout" />
+                    <button type="reset" name="logout" id="logout" class="submit" value="">Logout</button>
                 </div>
             </form>
         </div>
