--- a/client/public/scanharvester.html
+++ b/client/public/scanharvester.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>Scan Harvester UI</title>
     <!-- Font Icon -->
     <link rel="stylesheet" href="/fonts/material-icon/css/material-design-iconic-font.min.css">
@@ -27,10 +26,10 @@
                     </div>
                 </div>
                 <div class="form-submit" style="text-align: center;">
-                    <input type="reset" name="back" id="back" url="/packer" class="cancel" value="Cancel"/>
-                    <input type="reset" name="Scan" id="scan" class="submit" value="Scan"/>
+                    <button type="reset" name="back" id="back" url="/packer" class="cancel" value="">Cancel</button>
+                    <button type="reset" name="Scan" id="scan" class="submit" value="">Scan</button>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <input type="submit" name="submit" id="submit" class="submit" value="Pack" />
+                    <button type="submit" name="submit" id="submit" class="submit" value="" >Pack</button>
                 </div>
             </form>
         </div>
