--- a/client/public/teabagAdded.html
+++ b/client/public/teabagAdded.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>Teabag UI</title>
 
     <!-- Font Icon -->
@@ -79,7 +78,7 @@
                 </div>
                 
                 <div class="form-submit">
-                    <input type="reset" name="back" id="back" url="/packer/addteabag" class="cancel" value="Back"/>
+                    <button type="reset" name="back" id="back" url="/packer/addteabag" class="cancel">Back</button>
                 </div>
             </form>
         </div>
