--- a/client/public/customer.html
+++ b/client/public/customer.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>Littlepo Food Tracking</title>
 
     <!-- Font Icon -->
@@ -29,7 +28,8 @@
                     </div>
                 </div>
                 <div class="form-submit" style="text-align: center;">
-                    <input type="reset" name="Scan" id="scan" class="submit" value="Scan"/>
+                    <button type="reset" name="subScanmit" id="scan" class="submit">Scan</button>
+                    <!-- <input type="reset" name="Scan" id="scan" class="submit" value="Scan"/> -->
                     <!-- <input type="submit" name="submit" id="submit" class="submit" value="View History" /> -->
                     <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
                     <!-- <input type="reset" name="login" id="login" class="submit" value="Login As Operator" /> -->
