--- a/client/public/productInfo.html
+++ b/client/public/productInfo.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>Littlepo Query</title>
 
     <!-- Font Icon -->
@@ -78,7 +77,7 @@
                 </div>
                 
                 <div class="form-submit">
-                    <input type="reset" name="cancel" id="back" class="submit" url="/tracking" value="Close"/>
+                    <button type="reset" name="cancel" id="back" class="submit" url="/tracking" value="">Close</button>
                 </div>
             </form>
         </div>
