--- a/client/public/queryResult.html
+++ b/client/public/queryResult.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>Littlepo Food Tracking</title>
 
     <!-- Font Icon -->
@@ -46,7 +45,7 @@
                     </div>
                 <% } %>
                 <div class="form-submit" style="text-align: center;">
-                    <input type="reset" name="cancel" id="back" url="/" class="submit" value="Close"/>
+                    <button type="reset" name="cancel" id="back" url="/" class="submit" value="">Close</button>
                 </div>
             </form>
         </div>
