--- a/client/public/error.html
+++ b/client/public/error.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="form-submit">
-                    <input type="reset" name="back" id="back" url="/" class="cancel" value="Close" />
+                    <button type="reset" name="back" id="back" url="/" class="cancel" value="Close">Close</button>
                 </div>
             </form>
         </div>
