--- a/client/public/scanharvester.html
+++ b/client/public/scanharvester.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Scan Harvester UI</title>
     <!-- Font Icon -->
     <link rel="stylesheet" href="/fonts/material-icon/css/material-design-iconic-font.min.css">
@@ -22,7 +23,7 @@
                 </div>
                 <div class="form-group-1" style="text-align: center;">
                     <div class="video-group">
-                        <video id="preview" style="min-height: 100%;width: 250px; border: solid 1px gray;"></video>
+                        <video id="preview" class="video-back" playsinline style="min-height: 100%;width: 250px; border: solid 1px gray;"></video>
                     </div>
                 </div>
                 <div class="form-submit" style="text-align: center;">
