--- a/client/public/addteabag.html
+++ b/client/public/addteabag.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Packer UI</title>
 
     <!-- Font Icon -->
@@ -36,7 +37,7 @@
                 </div>
                 <div class="form-group-1">
                     <div class="video-group">
-                        <video id="preview" style="min-height: 100%;width: 250px; border: solid 1px gray;"></video>
+                        <video id="preview" class="video-back" playsinline style="min-height: 100%;width: 250px; border: solid 1px gray;"></video>
                     </div>
                 </div>
                 <div class="form-submit">
