Add Print QR function

--- a/client/public/retailshopResult.html
+++ b/client/public/retailshopResult.html
@@ -95,6 +95,7 @@
     </div>
     <!-- JS -->
     <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/js/jquery.print.min.js"></script>
     <script src="/js/qrcode.min.js"></script>
     <script src="/js/main.js"></script>
     <script type="text/javascript">
