--- a/client/public/packerResult.html
+++ b/client/public/packerResult.html
@@ -120,6 +120,7 @@
     </div>
     <!-- JS -->
     <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/js/jquery.print.min.js"></script>
     <script src="/js/qrcode.min.js"></script>
     <script src="/js/main.js"></script>
     <script type="text/javascript">
