--- a/client/public/productInfo.html
+++ b/client/public/productInfo.html
@@ -76,8 +76,8 @@
                     </div>
                 </div>
                 
-                <div class="form-submit">
-                    <button type="reset" name="cancel" id="back" class="submit" url="/tracking" value="">Close</button>
+                <div class="form-submit" style="text-align: center;">
+                    <button type="reset" name="cancel" id="back" class="submit" url="/tracking?qrCodeId=<%= trackingQRCode %>" value="">Close</button>
                 </div>
             </form>
         </div>
