--- a/client/public/queryResult.html
+++ b/client/public/queryResult.html
@@ -37,7 +37,7 @@
                     <div class="form-row">
                     <% } %>
                         <div class="form-group-littlepo">
-                            <label class="color_link"><a href="/productinfo?qrCodeId=<%= data[i].qrCodeID %>"><%= data[i].nodeID %></a></label>
+                            <label class="color_link"><a href="/productinfo?qrCodeId=<%= data[i].qrCodeID %>&trackingQRCode=<%= qrCodeId %>"><%= data[i].nodeID %></a></label>
                         </div>
                         <div class="form-group-ans">
                             <label><%= data[i].createTime %></label>
