--- a/client/public/harvester.html
+++ b/client/public/harvester.html
@@ -39,6 +39,7 @@
                 <div class="form-submit">
                     <!-- <input type="reset" name="cancel" id="cancel" class="cancel" value="Cancel" /> -->
                     <button type="submit" name="submit" id="submit" class="submit">Submit</button>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <button type="reset" name="logout" id="logout" class="submit">Logout</button>
                 </div>
             </form>
