--- a/client/public/customer.html
+++ b/client/public/customer.html
@@ -21,7 +21,7 @@
             <form method="GET" class="appointment-form" id="appointment-form" action="tracking">
                 <h2>Littlepo Food Tracking</h2>
                 <div class="form-group-1">
-                    <input type="text" name="qrCodeId" id="qrCodeId" placeholder="Please enter of scan QRCode of product" required style="display: none;"/>
+                    <input type="text" name="qrCodeId" id="qrCodeId" placeholder="Please enter of scan QRCode of product" required />
                     <!-- <input type="text" name="nodeName" id="nodeName" placeholder="Node Name" required /> -->
                 </div>
                 <div class="form-group-1" style="text-align: center;">
@@ -32,7 +32,7 @@
                 <div class="form-submit" style="text-align: center;">
                     <button type="reset" name="subScanmit" id="scan" class="submit">Scan</button>
                     <!-- <input type="reset" name="Scan" id="scan" class="submit" value="Scan"/> -->
-                    <!-- <input type="submit" name="submit" id="submit" class="submit" value="View History" /> -->
+                    <input type="submit" name="submit" id="submit" class="submit" value="View History" />
                     <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
                     <!-- <input type="reset" name="login" id="login" class="submit" value="Login As Operator" /> -->
                 </div>
