Add support get child of product batch

--- a/client/public/retailshop.html
+++ b/client/public/retailshop.html
@@ -24,7 +24,7 @@
                     <input type="text" name="dxQRCodeId" id="dxQRCodeId" placeholder="Teabag QRCode" required style="width: 250px;"/>
                 </div>
                 <div class="form-group-1">
-                    <input type="number" name="price" id="price" placeholder="Price (in SGD)" required style="width: 250px;"/>
+                    <input type="number" step="0.01" name="price" id="price" placeholder="Price (in SGD)" required style="width: 250px;"/>
                 </div>
                 <div class="form-group-1">
                     <div class="form-group-ans" style="text-align: left; width: 250px;">
